--- a/service/docker-compose.yml
+++ b/service/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3'
 
 services:
   orcano:
-    build:
-      context: .
-    shm_size: '1gb' # need more shm for Dolphin to avoid SIGBUS
+    build: .
+    shm_size: 256M # need more shm for Dolphin to avoid SIGBUS
     volumes:
-      - ./data:/tmp/orcano_data # TODO: Assign final directory
+      - ./data:/data # TODO: Assign final directory
     ports:
       - 53273:53273
 #      - 55020:55020 # for debugging
     restart: unless-stopped
+#    cap_add:
+#      - sys_admin # for perf
