service: Fix bad COPY command in Dockerfile

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -8,7 +8,7 @@ COPY Config /root/.dolphin-emu/Config
 # Configure service
 WORKDIR /service
 RUN mkdir data
-COPY service.py image.dol .
+COPY service.py image.dol ./
 
 # Set unbuffered mode so we get stdout
 ENV PYTHONUNBUFFERED=1
