--- a/checker/docker-compose.yml
+++ b/checker/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: '2.1'
+
 services:
   # Give your container proper names!
   orcano-checker:
@@ -7,12 +8,20 @@ services:
     ports:
       - 8010:3031
     environment:
-     - MONGO_ENABLED=1
-     - MONGO_HOST=orcano-mongo
-     - MONGO_PORT=27017
-     - MONGO_USER=orcano_checker
-     - MONGO_PASSWORD=orcano_checker
-
+      - MONGO_ENABLED=1
+      - MONGO_HOST=orcano-mongo
+      - MONGO_PORT=27017
+      - MONGO_USER=orcano_checker
+      - MONGO_PASSWORD=orcano_checker
+    mem_limit: 1G
+    memswap_limit: 2G
+    ulimits:
+      core:
+        soft: 0
+        hard: 0
+      nproc:
+        soft: 4000
+        hard: 4000
   # The python checkerlib requires a mongo db!
   orcano-mongo:
     image: mongo
@@ -21,3 +30,12 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: orcano_checker
       MONGO_INITDB_ROOT_PASSWORD: orcano_checker
+    mem_limit: 1G
+    memswap_limit: 2G
+    ulimits:
+      core:
+        soft: 0
+        hard: 0
+      nproc:
+        soft: 4000
+        hard: 4000
