--- a/service/docker-compose.yml
+++ b/service/docker-compose.yml
@@ -1,14 +1,23 @@
-version: '3'
+version: '2.1'
 
 services:
   orcano:
     build: .
-    shm_size: 256M # need more shm for Dolphin to avoid SIGBUS
+    shm_size: 256M
     volumes:
-      - ./data:/data # TODO: Assign final directory
+      - ./data:/data
     ports:
       - 53273:53273
-#      - 55020:55020 # for debugging
+    # - 55020:55020 # for debugging
     restart: unless-stopped
+    mem_limit: 1G
+    memswap_limit: 2G
+    ulimits:
+      core:
+        soft: 0
+        hard: 0
+      nproc:
+        soft: 4000
+        hard: 4000
 #    cap_add:
 #      - sys_admin # for perf
